--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-modal": "^3.14.4",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
@@ -16,7 +17,6 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -24,6 +24,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-modal": "^3.13.1",
+    "@types/react-router-dom": "^5.3.2",
     "@types/styled-components": "^5.1.17"
   },
   "scripts": {
