--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: '17.x'
       - name: Build web-app
         run: |
-          npm ci
+          yarn install --frozen-lockfile
           yarn run build
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
