--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,8 @@ jobs:
           node-version: '17.x'
       - name: Build web-app
         run: |
-          yarn install --frozen-lockfile
-          yarn run build
+          npm ci  
+          npm run build
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
